# microswitch

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: test.yml
example/: C4.flac  C5.flac  D4.flac  D5.flac  E4.flac  F#3.flac  G#4.flac  config.yaml
example/samples/: A#4.flac  A#5.flac  E5.flac  E6.flac  F#4.flac
resources/: README.md  resources.lib  resources.rc
src/: application.rs  config.rs  error.rs  gamepad_thread.rs  lib.rs  main.rs  sample_loader.rs  sound_bank.rs  sound_thread.rs
src/gui/: application.rs  executor.rs  mod.rs  style.rs  types.rs
