[package]
name = "microswitch"
version = "2.0.0"
authors = ["Joris van der Wel <joris@jorisvanderwel.com>"]
description = "μSwitch is a cross-platform application which enables musicians to play sounds using switches. It's designed for people with disabilities to help them practise playing music and to perform in a concert."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Joris-van-der-Wel/microswitch"
repository = "https://github.com/Joris-van-der-Wel/microswitch"
keywords = ["accessibility", "music", "switch", "gamepad", "midi"]
categories = ["accessibility", "multimedia::audio"]
edition = "2018"
include = ["resources/**/*", "src/**/*", "Cargo.toml", "build.rs", "LICENSE", "README.md"]

[dependencies]
rodio = "0.13"
iced = { version = "0.3", features = ["tokio"] }
iced_native = "0.4"
iced_futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
rand = "0.8"
thiserror = "1.0"
path-absolutize = "3.0"
gilrs = "0.8"
msgbox = "0.6"
tokio = {version = "1.11", features = ["sync"]}
winapi = {version = "0.3", features = ["wincon", "winuser"]}

[build-dependencies]
image = "0.23"
yaml-rust = "0.4"
path-absolutize = "3.0"

[dev-dependencies]
pretty_assertions = "0.6"
