[package]
name = "microswitch"
version = "2.0.0"
authors = ["Joris van der Wel <joris@jorisvanderwel.com>"]
description = "μSwitch is a cross-platform application which enables musicians to play sounds using switches. It's designed for people with disabilities to help them practise playing music and to perform in a concert."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Joris-van-der-Wel/microswitch"
repository = "https://github.com/Joris-van-der-Wel/microswitch"
keywords = ["accessibility", "music", "switch", "gamepad", "midi"]
categories = ["accessibility", "multimedia::audio"]
edition = "2021"
include = ["resources/**/*", "src/**/*", "Cargo.toml", "build.rs", "LICENSE", "README.md"]

[dependencies]
futures = "0.3.28"
gilrs = "0.10.2"
# disable the gpu renderer by disabling the default wgpu feature
iced = { version = "0.10.0", features = ["tokio"] }
iced_futures = "0.7.0"
msgbox = "0.7.0"
path-absolutize = "3.1.1"
rand = "0.8.5"
rodio = "0.17.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["sync"] }
winapi = { version = "0.3.9", features = ["winuser", "wincon"] }

[build-dependencies]
image = "0.24.7"
path-absolutize = "3.1.1"
yaml-rust = "0.4.5"

[dev-dependencies]
pretty_assertions = "1.4.0"
